# Ai-factory-builder

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
ai_factory/: config.py  config_env_validator.py  logging_setup.py  main.py
ai_factory/builder/: __init__.py  builder_agent.py  builder_router.py  builder_store.py
ai_factory/data/: memory.db
ai_factory/debugger/: __init__.py  debugger_runner.py  debugger_store.py
ai_factory/deployer/: __init__.py  deployer_agent.py  deployer_router.py  deployer_store.py
ai_factory/evaluator/: __init__.py  evaluator_agent.py  evaluator_router.py  evaluator_store.py
ai_factory/evaluator_v2/: __init__.py  evaluator_v2_agent.py  evaluator_v2_router.py  evaluator_v2_store.py
ai_factory/memory/: __init__.py  memory_db.py  memory_embeddings.py  memory_store.py
ai_factory/models/: __init__.py  model_clients.py  planner.py
chromadb/: __init__.py
deployments/31/: app.py  (+1 more)
docs/: ARCHITECTURE.md  NEXT.md  PHASES.md  README.md
tests/: test_builder_feedback_loop.py  test_builder_rebuild.py  test_debugger_run.py  test_debugger_search.py  test_deployer_local.py  test_deployer_registry.py  test_evaluator_learning.py  test_evaluator_memory_feedback.py  test_evaluator_reward.py  test_evaluator_run.py  test_health.py  test_memory_log.py  test_memory_search.py  test_orchestrator_adaptive_threshold.py  test_orchestrator_repair_then_deploy.py  test_orchestrator_run.py  test_planner.py  test_router_v2_registry.py  test_router_v2_route.py  test_supervisor_memory_cycle.py  test_supervisor_run.py
(+38 files in other folders)
